--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ github_repo: "https://github.com/feng0139/feng0139.github.io.git" # you code rep
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "没有意义，那就去创造一个。"
+sidebar-avatar: /img/feng0139.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-#zhihu_username:     qiubaiying
+# weibo_username:     Feng0139
+#zhihu_username:     Feng0139
 github_username:    Feng0139
-#facebook_username:  baiying.qiu.7
-#jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+#facebook_username:  Feng0139
+#jianshu_username:   Feng0139
+#twitter_username:   Feng0139
 
 
 
@@ -99,7 +99,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "Cyyou！官方聊天室",
+        href: "https://discord.gg/uaQfDnz"
     }
 ]
