--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Feng Blog
 SEOTitle: 冯嘉健的博客 | Feng Blog
 header-img: img/post-bg-desk.jpg
 email: feng0139@hotmail.com
-description: "发现意义？创造意义！"
+description: "没有意义，那就去创造一个。"
 keyword: "Feng, FengBlog, 冯嘉健的博客, fengjiajian, 冯嘉健"
 url: "http://fengjiajian.top"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
