--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,12 @@ ga_domain: fengjiajian.top               # 默认的是 auto, 这里我是自定
 
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 0              # 相同标签数量大于这个数，才会出现在首页
 
 
 
 # Progressive Web Apps
-chrome-tab-theme-color: "#000000"
+chrome-tab-theme-color: "#FF0000"
 service-worker: true
 
 
