--- a/_config.yml
+++ b/_config.yml
@@ -61,12 +61,12 @@ kramdown:
 
 # Gitalk
 gitalk:
-  enable: False    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  enable: true    #是否开启Gitalk评论
+  clientID: 550915629563bc977d4a                            #生成的clientID
+  clientSecret: 6de721a4368229faa1a939f98fc0142933c3d4ff    #生成的clientSecret
+  repo: fengjiajian.github.io    #仓库名称
+  owner: Feng0139    #github用户名
+  admin: Feng0139
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
