--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ gitalk:
   repo: fengjiajian.github.io    #仓库名称
   owner: Feng0139    #github用户名
   admin: Feng0139
+  ID: location.href
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
