--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: 550915629563bc977d4a                            #生成的clientID
   clientSecret: 6de721a4368229faa1a939f98fc0142933c3d4ff    #生成的clientSecret
-  repo: fengjiajian.github.io    #仓库名称
+  repo: feng0139.github.io    #仓库名称
   owner: Feng0139    #github用户名
   admin: Feng0139
   ID: location.href
