--- a/_config.yml
+++ b/_config.yml
@@ -66,8 +66,8 @@ gitalk:
   clientSecret: 6de721a4368229faa1a939f98fc0142933c3d4ff    #生成的clientSecret
   repo: feng0139.github.io    #仓库名称
   owner: Feng0139    #github用户名
-  admin: Feng0139
-  ID: location.href
+  admin: [Feng0139
+  ID: md5(location.pathname)
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
