--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ github_username:    Feng0139
 #facebook_username:  Feng0139
 #jianshu_username:   Feng0139
 #twitter_username:   Feng0139
+discord_username:    uaQfDnz
 
 
 
