--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/feng0139.png      # use absolute URL, seeing it's used in b
 # SNS settings
 RSS: false
 discord_username:    uaQfDnz
-zhihu_username:     Feng0139
+#zhihu_username:     Feng0139
 github_username:    Feng0139
 #facebook_username:  Feng0139
 #jianshu_username:   Feng0139
