--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,6 @@ service-worker: true
 friends: [
     {
         title: "Cyyou！官方聊天室",
-        href: "https://discord.gg/uaQfDnz"
+        href: "https://discord.gg/SgEAh66"
     }
 ]
